<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"

    android:orientation="vertical"
    android:background="@color/bgGrey"
    android:padding="2dp"


    >

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/bgGrey"
        android:textSize="35sp"
        android:padding="5dp"
        android:textStyle="bold"
        android:gravity="end|bottom"



        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"

        >

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_7"
            android:onClick="onDigit"
            android:textSize="25sp"


            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_8"
            android:onClick="onDigit"
            android:textSize="25sp"


            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_9"
            android:onClick="onDigit"
            android:textSize="25sp"


            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/stringDivide"
            android:onClick="onOperator"
            android:textSize="25sp"


            tools:ignore="UsingOnClickInXml" />


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"

        >

        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_4"
            android:onClick="onDigit"
            android:textSize="25sp"


            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_5"
            android:onClick="onDigit"
            android:textSize="25sp"


            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_6"
            android:onClick="onDigit"
            android:textSize="25sp"


            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/stringMultiply"
            android:onClick="onOperator"
            android:textSize="25sp"


            tools:ignore="UsingOnClickInXml" />


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"

        >

        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_1"
            android:onClick="onDigit"
            android:textSize="25sp"


            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_2"
            android:onClick="onDigit"
            android:textSize="25sp"


            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_3"
            android:onClick="onDigit"
            android:textSize="25sp"


            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/stringMinus"
            android:onClick="onOperator"
            android:textSize="25sp"


            tools:ignore="UsingOnClickInXml" />


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"

        >

        <Button
            android:id="@+id/btnClr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/clr"
            android:onClick="onClr"
            android:textSize="25sp"


            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_0"
            android:onClick="onDigit"
            android:textSize="25sp"


            tools:ignore="UsingOnClickInXml" />



        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/stringDot"
            android:onClick="onDecimalPoint"
            android:textSize="25sp"


            tools:ignore="UsingOnClickInXml" />



        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/stringAdd"
            android:onClick="onOperator"
            android:textSize="25sp"


            tools:ignore="UsingOnClickInXml" />


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"

        >

        <Button
            android:id="@+id/btnEquals"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/equals"
            android:onClick="onEqual"
            android:textSize="25sp"


            tools:ignore="UsingOnClickInXml" />


    </LinearLayout>



</LinearLayout>




